Correction comportement cards version mobile

--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -10,15 +10,15 @@
     margin: 40px 0;
     padding: 40px 30px;
     box-sizing: border-box;
-    gap: 60px;
     border-radius: 25px;
     background-color: $thirdcolor;
+    gap: 50px;
 
 
     &__cards {
         position: relative;
-        height: 340px;
         width: 340px;
+        height: 340px;
         border-radius: 10px;
         list-style-type: none;
         background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
@@ -58,17 +58,18 @@
 
 @media only screen and (max-width:1024px) {
 .card-container {
-        margin: 25px 0;
+
+        padding: 0;
         gap: 30px;
         background-color: $secondarycolor;
 
         &__cards {
-            width: 264px;
+            width: 100% ;
             height: 250px;
 
             &--img {
                 width:100%;
-                height: 250px;
+                height: 100%;
             }
 
             &--gradient {
@@ -91,11 +92,11 @@
         gap: 30px;
 
         &__cards {
-            width: 285px;
+            width: 100%;
             max-height: 100%;
 
             &--img {
-                width: 285px;
+                width: 100%;
                 max-height: 100%;
 
             }
